<?xml version="1.0"?>
<package>
  <name>testit_dtron</name>
  <version>0.0.1</version>
  <description>TestIt DTRON extension</description>

  <maintainer email="gert.kanter@ttu.ee">Gert Kanter</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/testit</url>
  <url type="bugtracker">https://github.com/GertKanter/testit/issues</url>
  <url type="repository">https://github.com/GertKanter/testit</url>

  <author email="gert.kanter@ttu.ee">Gert Kanter</author>
  <author email="artur.gummel@ttu.ee">Artur Gummel</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
</package>
